refactor: write business logic
